# frc

./: .gitignore  License.txt  README.md  project.json  reorg.txt
python/: readme.txt
software/Motion Profiles/: Motion Variables.txt
software/Motion Profiles/Circle/: Circle_Preferences.bot  Circle_left.csv  Circle_left_detailed.csv  Circle_right.csv  Circle_right_detailed.csv
software/Motion Profiles/Left-Scale-Left/: Left-Scale-Left_Preferences.bot  (+4 more)
software/Motion Profiles/Left-Scale-Left-pt1/: Left-Scale-Left-pt1_Preferences.bot  Left-Scale-Left-pt1_left.csv  Left-Scale-Left-pt1_left_detailed.csv  Left-Scale-Left-pt1_right.csv  Left-Scale-Left-pt1_right_detailed.csv
software/Motion Profiles/Left-Scale-Left-pt2/: Left-Scale-Left-pt2_Preferences.bot  Left-Scale-Left-pt2_left.csv  Left-Scale-Left-pt2_left_detailed.csv  Left-Scale-Left-pt2_right.csv  Left-Scale-Left-pt2_right_detailed.csv
software/bat/: configToRio.bat  readme.txt  setUpRIoCon.bat
software/cpp/: .gitignore  RBTest.yaml
software/cpp/2019.kosmos/J4-ic-pipeline/: CMakeLists.txt  GripPipeline.cpp  GripPipeline.h  ic_pipeline.cpp  ic_pipeline.sh  readme.txt
software/cpp/2019.kosmos/J4-ic-pipeline/network_tables/network_tables/: build.sh
software/cpp/2020.Roley.GStreamer/: CMakeLists.txt  build.bat  ic_gstclient.bat  ic_gstclient_1181.bat  ic_gstclient_1182.bat  ic_gstclient_1183.bat  ic_gstclient_purge.bat  ic_gstdriverstation.ahk  ic_gstserver.cpp  ic_gstserver.pl  readme.txt
software/cpp/2020.Roley.Vision/: CMakeLists.txt  GripPipeline.cpp  GripPipeline.h  MJPEGWriter.cpp  build.bat  build.sh  ic_pipeline.cpp  ic_pipeline.sh  readme.txt
software/labview/: .gitignore  readme.txt
(+1787 files in other folders)
